examples/test/testpolicy19674.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19674
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key42: value38
      key5: value42
      key4: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value4
          key16: value39
      podSelector:
        matchLabels:
          key37: value46
